k8s/apps/security/trivy/dashboard/route.yaml
# yaml-language-server: $schema=https://k8s-schemas-jnobrega.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trivy-dashboard
spec:
  hostnames:
  - trivy.jnobrega.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal
    namespace: network
    sectionName: websecure
  rules:
  - backendRefs:
    - name: trivy-operator-dashboard
      port: 8900
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
